// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render expeneses summary with 1 expense 1`] = `
<div>
  <h1>
    Mostrando 
     
    gastos
     totalizando 
    $ 50,000.0
  </h1>
</div>
`;

exports[`render expeneses summary with multiple expenses 1`] = `
<div>
  <h1>
    Mostrando 
     
    gastos
     totalizando 
    $ 8,234,857,328,945.0
  </h1>
</div>
`;
